@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
  *
- * $Id: coreview.cpp,v 1.1 2003/09/09 23:21:22 vanto Exp $
+ * $Id: coreview.cpp,v 1.2 2003/09/18 14:54:32 vanto Exp $
  *
  *****************************************************************************/
 
@@ -28,7 +28,7 @@
 QString CoreView::tip()
 {
     CoreModel *m = (CoreModel*)model();
-    return QString("<b>Core</b><br><u>%1</u> (%2)<br><i>%3</i><br><hr>" \
+    return QString("<b>Core</b><br><u>%1</u> (%2)<br><i>%3</i><hr>" \
                    "<b>Execution time:</b> %7")
         .arg(m->name())
         .arg(m->type())
