@@ -1,3 +1,7 @@
+2003-09-18  Tammo van Lessen  <vanto@users.sourceforge.net>
+
+	* pinmodel.cpp (isConnectable): Added isConnectable for pins
+
 2003-09-18  Steffen Pingel  <squig@users.sourceforge.net>
 
 	* canvasview.cpp (maybeTip): Fixed coordinate mapping.
